# salmon-server

./: README.md  main.py  pyproject.toml  retriver.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 기능-요청.md
.github/workflows/: AutoAssignReviewer.yml
prompts/: emoji.yaml  general.yaml  prompt_loader.py
tests/: test_cuda.py  test_prompt_loader.py  test_retriver.py
