[tool.poetry]
name = "salmon-server"
version = "0.1.0"
description = ""
authors = ["salmon113-ai <salmon113.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
python-dotenv = "^1.0.1"
openai = "^1.50.0"
pyyaml = "^6.0.2"
langchain-community = "^0.3.1"
langsmith = "^0.1.131"
langchain-huggingface = "^0.1.0"
pdfplumber = "^0.11.4"
sentence-transformers = "^3.1.1"
faiss-cpu = "^1.8.0.post1"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
